# system-design

./: .gitignore  LICENSE  README.md  pytest.ini
low-level-design/: test.py
low-level-design/SOLID_Principle/: main.py  open_closed.py  single_responsibility.py
low-level-design/SOLID_Principle/open_closed_principles/: open_closed.py  shapes.py
low-level-design/SOLID_Principle/single_responsibility/: single_responsibility.py
low_level_design/: __init__.py
low_level_design/SOLID_Principle/: main.py
low_level_design/SOLID_Principle/dependency_inversion/: dependency_inversion.py  dependency_inversion_violation.py
low_level_design/SOLID_Principle/interface_segregation_principle/: interface_segregation.py  interface_segregation_violation.py
low_level_design/SOLID_Principle/liskov_substitution_principle/: LSP_with_violation.py  liskov_substitution.py
low_level_design/SOLID_Principle/open_closed_principles/: discounts.py
low_level_design/patterns/behavioral/chain_of_responsibility/: __init__.py
low_level_design/practice_problems/design_an_elevator_system/: design-elevator-system.md
low_level_design/practice_problems/design_atm_machine/: design-atm-machine.md
low_level_design/practice_problems/design_logger_framework/: logger-framework.md
low_level_design/practice_problems/design_parking_lot/: __init__.py  parking-lot.md
low_level_design/practice_problems/design_stack_overflow/: design-stackoverflow.md
redis-practice/: .env.example  .gitignore  README.md  pyproject.toml
redis-practice/app/: cache.py  config.py  main.py  schemas.py
redis-practice/tests/: conftest.py  test_cache.py  test_e2e.py
(+510 files in other folders)
