[project]
name = "redis-practice"
version = "0.1.0"
description = "FastAPI + Redis caching practice"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "redis>=7.2.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "asgi-lifespan>=2.1.0",
]

# black formatter related configuration

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = false

# ruff related configuration

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
]
ignore = ["E501"]  # line too long handled by black

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# mypy related configuration

[tool.mypy]
python_version = "3.11"
strict = true

warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

ignore_missing_imports = true


# bandit related configuration

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

#pytest setup

[tool.pytest.ini_options]
pythonpath = ["."]
